--- a/CarND-Term3-P2-Semantic-Segmentation.ipynb
+++ b/CarND-Term3-P2-Semantic-Segmentation.ipynb
@@ -20,7 +20,8 @@
     "import helper\n",
     "import warnings\n",
     "from distutils.version import LooseVersion\n",
-    "import project_tests as tests"
+    "import project_tests as tests\n",
+    "import time"
    ]
   },
   {
@@ -366,18 +367,21 @@
     "    print(\"Training...\")\n",
     "    print()\n",
     "    \n",
-    "    for epoch in epochs:\n",
+    "    for epoch in range(epochs):\n",
+    "        # Print result for record\n",
+    "        print(\"EPOCH {} ...\".format(epoch+1))\n",
+    "        start_time = time.time()\n",
+    "        \n",
     "        for image, label in get_batches_fn(batch_size):\n",
     "            # Training\n",
     "            _, loss = sess.run([train_op, cross_entropy_loss],\n",
-    "                               feed_dict = {input_image: image, correct_label:label,\n",
-    "                                            keep_prob: keep_prob, learning_rate: learning_rate\n",
+    "                               feed_dict = {input_image: image, correct_label: label,\n",
+    "                                            keep_prob: 0.5, learning_rate: 0.000001\n",
     "                                           }\n",
     "                              )\n",
-    "            \n",
-    "        # Print result for record\n",
-    "        print(\"EPOCH {} ...\".format(epoch+1))\n",
-    "        print(\"Loss = {:.3f}\".format(loss))\n",
+    "            print(\"Loss = {:.3f}\".format(loss))\n",
+    "        elapsed_time = time.time() - start_time\n",
+    "        print(\"Elapsed time = {:.3f}\".format(elapsed_time))\n",
     "        print()\n",
     "    \n",
     "    # Finish training\n",
@@ -397,18 +401,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-bb74b8d1a470>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_train_nn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_nn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/CarND-Term3-P2-Semantic-Segmentation/project_tests.py\u001b[0m in \u001b[0;36mfunc_wrapper\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfunc_wrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Tests Passed'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/CarND-Term3-P2-Semantic-Segmentation/project_tests.py\u001b[0m in \u001b[0;36mtest_train_nn\u001b[0;34m(train_nn)\u001b[0m\n\u001b[1;32m    138\u001b[0m             \u001b[0;34m'keep_prob'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mkeep_prob\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m             'learning_rate': learning_rate}\n\u001b[0;32m--> 140\u001b[0;31m         \u001b[0m_prevent_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_nn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/CarND-Term3-P2-Semantic-Segmentation/project_tests.py\u001b[0m in \u001b[0;36m_prevent_print\u001b[0;34m(function, params)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_prevent_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevnull\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__stdout__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-10-656bb5876043>\u001b[0m in \u001b[0;36mtrain_nn\u001b[0;34m(sess, epochs, batch_size, get_batches_fn, train_op, cross_entropy_loss, input_image, correct_label, keep_prob, learning_rate)\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mget_batches_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m             \u001b[0;31m# Training\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from b'./data/vgg/variables/variables'\n"
      ]
     }
    ],
@@ -425,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -455,13 +451,34 @@
     "        #  https://datascience.stackexchange.com/questions/5224/how-to-prepare-augment-images-for-neural-network\n",
     "\n",
     "        # TODO: Build NN using load_vgg, layers, and optimize function\n",
+    "        \n",
+    "        # Create placeholders\n",
+    "        correct_label = tf.placeholder(tf.int32, [None, None, None, num_classes], name = 'correct_label')\n",
+    "        learning_rate = tf.placeholder(tf.float32, name = 'learning_rate')\n",
+    "        \n",
+    "        # Load the layers from the VGG16\n",
     "        input_image, keep_prob, layer3_out, layer4_out, layer7_out = load_vgg(sess, vgg_path)\n",
-    "        layer_output = layers(layer3_out, layer4_out, layer7_out, num_classes)\n",
+    "        \n",
+    "        # Construct new layers\n",
+    "        output_layer = layers(layer3_out, layer4_out, layer7_out, num_classes)\n",
     "\n",
     "        # TODO: Train NN using the train_nn function\n",
+    "        # Define optimizer\n",
+    "        logits, train_op, cross_entropy_loss = optimize(output_layer, correct_label, learning_rate, num_classes)\n",
+    "        \n",
+    "        # Define training epochs and batch size\n",
+    "        epochs = 10\n",
+    "        batch_size = 2\n",
+    "        \n",
+    "        print('Before training')\n",
+    "        \n",
+    "        # Start training\n",
+    "        train_nn(sess, epochs, batch_size, get_batches_fn, train_op, cross_entropy_loss, input_image, correct_label, keep_prob, learning_rate)\n",
+    "        \n",
+    "        print('After training')\n",
     "\n",
     "        # TODO: Save inference data using helper.save_inference_samples\n",
-    "        #  helper.save_inference_samples(runs_dir, data_dir, sess, image_shape, logits, keep_prob, input_image)\n",
+    "        # helper.save_inference_samples(runs_dir, data_dir, sess, image_shape, logits, keep_prob, input_image)\n",
     "\n",
     "        # OPTIONAL: Apply the trained model to a video\n"
    ]
@@ -475,10 +492,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
