--- a/CarND-Term3-P2-Semantic-Segmentation.ipynb
+++ b/CarND-Term3-P2-Semantic-Segmentation.ipynb
@@ -40,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.3.0\n"
+      "TensorFlow Version: 1.2.1\n"
      ]
     }
    ],
@@ -376,7 +376,7 @@
     "            # Training\n",
     "            _, loss = sess.run([train_op, cross_entropy_loss],\n",
     "                               feed_dict = {input_image: image, correct_label: label,\n",
-    "                                            keep_prob: 0.5, learning_rate: 0.000001\n",
+    "                                            keep_prob: 0.5, learning_rate: 0.00001\n",
     "                                           }\n",
     "                              )\n",
     "            print(\"Loss = {:.3f}\".format(loss))\n",
@@ -467,19 +467,23 @@
     "        logits, train_op, cross_entropy_loss = optimize(output_layer, correct_label, learning_rate, num_classes)\n",
     "        \n",
     "        # Define training epochs and batch size\n",
-    "        epochs = 10\n",
-    "        batch_size = 2\n",
+    "        epochs = 40\n",
+    "        batch_size = 5\n",
     "        \n",
-    "        print('Before training')\n",
+    "        # print('Before training')\n",
     "        \n",
     "        # Start training\n",
     "        train_nn(sess, epochs, batch_size, get_batches_fn, train_op, cross_entropy_loss, input_image, correct_label, keep_prob, learning_rate)\n",
     "        \n",
-    "        print('After training')\n",
+    "        # print('After training')\n",
     "\n",
+    "        print('Before saving inference data')\n",
+    "        \n",
     "        # TODO: Save inference data using helper.save_inference_samples\n",
-    "        # helper.save_inference_samples(runs_dir, data_dir, sess, image_shape, logits, keep_prob, input_image)\n",
+    "        helper.save_inference_samples(runs_dir, data_dir, sess, image_shape, logits, keep_prob, input_image)\n",
     "\n",
+    "        print('After saving inference data')\n",
+    "        \n",
     "        # OPTIONAL: Apply the trained model to a video\n"
    ]
   },
@@ -493,12 +497,24 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -517,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
